change to facebook

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ a{
 					<a href="https://500px.com/karlsjohnson">Photostream</a><br />
 					<a href="https://500px.com/karlsjohnson">Best Photos</a><br />
 					<br />
-					<a href="https://twitter.com/karlsjohnson"><img src="Twitter.jpg"></a><br>
+					<a href="https://www.facebook.com/karlstjohnson"><img src="facebook.png"></a><br>
 				</td>
 				<td>
 					
