--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ a{
 					<a href="https://500px.com/karlsjohnson"><img src="500px.png"></a><br />
 				<td id="photos">
 					<a href="https://www.facebook.com/karlstjohnson"><img src="facebook.png"></a>
-					<a href="https://twitter.com/karlsjohnson"><img src="twitter.jpg"></a>
+					<a href="https://twitter.com/karlsjohnson"><img src="Twitter.jpg"></a>
 				<td>
 					
 				</td>
