--- a/home/index.html
+++ b/home/index.html
@@ -573,7 +573,7 @@
                             <figcaption>CodePen</figcaption>
                         </figure>
                     </a>
-                    <a href="https://www.emmet.io/">
+                    <a href="https://docs.emmet.io/cheat-sheet/">
                         <figure>
                             <img src="./resources/images/emmet.png" alt="emmet Icon">
                             <figcaption>emmet</figcaption>
