--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<a class="nav-link" href="http://www.karlsjohnson.com/">Home</a>
 			<a class="nav-link" href="http://karlsjohnson.tumblr.com">News</a>
 			<a class="nav-link" href="http://karlsjohnson.tumblr.com/ask">Contact</a>
-			<a class="nav-link" href="http://www.karlsjohnson.com/learn/">Learn</a>
+			<a class="nav-link" href="http://www.karlsjohnson.com/link/">Link</a>
 
 		</nav>
 		<div class="jumbotron">
