Added cnbc to link

--- a/link/index.html
+++ b/link/index.html
@@ -35,6 +35,12 @@
                             <figcaption>CNN</figcaption>
                         </figure>
                     </a>
+                    <a href="http://cnbc.com/">
+                        <figure>
+                            <img src="./resources/images/cnbc.png" alt="CNBC Icon">
+                            <figcaption>CNBC</figcaption>
+                        </figure>
+                    </a>
                     <div class="space"></div>
                     <a href="https://www.instagram.com">
                         <figure>
