--- a/link/index.html
+++ b/link/index.html
@@ -386,7 +386,7 @@
             <div class="col-12 col-md-4">
                 <div class="itemLink">
                     <div class="itemTitle">Learn</div>
-                    <a href="https://wikipedia.com/">
+                    <a href="https://wikipedia.org/">
                         <figure>
                             <img src="./resources/images/wikipedia.png" alt="Wikipedia Icon">
                             <figcaption>Wikipedia</figcaption>
