Update Colors, reduce links

--- a/link/index.html
+++ b/link/index.html
@@ -144,12 +144,11 @@
                             <figcaption>G Drive</figcaption>
                         </figure>
                     </a>
-
                 </div>
             </div>
             <div class="col-12">
                 <div class="itemLink">
-                    <div id="topProgramming" class="itemTitle">Internet Programming</div>
+                    <div id="topProgramming" class="itemTitle">Programming</div>
                     <a href="https://www.github.com">
                         <figure>
                             <img src="./resources/images/github.png" alt="github Icon">
@@ -199,19 +198,14 @@
                             <figcaption>GFonts</figcaption>
                         </figure>
                     </a>
+                    <div class="space"></div>
                     <a href="http://www.thesassway.com/">
                         <figure>
                             <img src="./resources/images/sass.png" alt="SASS Icon">
                             <figcaption>Sass</figcaption>
                         </figure>
                     </a>
-                </div>
-            </div>
-
-            <div class="col-12">
-                <div class="itemLink">
-                    <div id="topProgramming" class="itemTitle">Javascript Frameworks</div>
-                    <a href="https://angular.io/">
+                                        <a href="https://angular.io/">
                         <figure>
                             <img src="./resources/images/angular.png" alt="Angular Icon">
                             <figcaption>Angular JS</figcaption>
@@ -221,19 +215,6 @@
                         <figure>
                             <img src="./resources/images/react.png" alt="React Icon">
                             <figcaption>React JS</figcaption>
-                        </figure>
-                    </a>
-                    <div class="space"></div>
-                    <a href="https://gruntjs.com/">
-                        <figure>
-                            <img src="./resources/images/grunt.png" alt="Grunt Icon">
-                            <figcaption>Grunt JS</figcaption>
-                        </figure>
-                    </a>
-                    <a href="https://gulpjs.com/">
-                        <figure>
-                            <img src="./resources/images/gulp.png" alt="Gulp Icon">
-                            <figcaption>Gulp JS</figcaption>
                         </figure>
                     </a>
                     <a href="http://jquery.com/">
@@ -248,41 +229,7 @@
                             <figcaption>nodejs JS</figcaption>
                         </figure>
                     </a>
-                </div>
-            </div>
-            <div class="col-12">
-                <div class="itemLink">
-                    <div id="development" class="itemTitle">Software</div>
-                    <a href="https://packagecontrol.io/">
-                        <figure>
-                            <img src="./resources/images/sublime.png" alt="Sublime Text Icon">
-                            <figcaption>SB-PC</figcaption>
-                        </figure>
-                    </a>
-                    <a href="http://docs.sublimetext.info/en/latest/index.html">
-                        <figure>
-                            <img src="./resources/images/sublime.png" alt="Sublime Text Icon">
-                            <figcaption>SB-Docs</figcaption>
-                        </figure>
-                    </a>
-                    <a href="https://docs.emmet.io/cheat-sheet/">
-                        <figure>
-                            <img src="./resources/images/emmet.png" alt="emmet Icon">
-                            <figcaption>Emmet</figcaption>
-                        </figure>
-                    </a>
-                    <a href="https://www.npmjs.com/">
-                        <figure>
-                            <img src="./resources/images/npm.png" alt="NPM Icon">
-                            <figcaption>NPM</figcaption>
-                        </figure>
-                    </a>
-                    <a href="https://brew.sh/">
-                        <figure>
-                            <img src="./resources/images/homebrew.png" alt="Homebrew Icon">
-                            <figcaption>HBrew</figcaption>
-                        </figure>
-                    </a>
+
                 </div>
             </div>
             <div class="col-12">
@@ -337,11 +284,7 @@
                             <figcaption>Academy</figcaption>
                         </figure>
                     </a>
-                 </div>
-            </div>
-            <div class="col-12">
-                <div class="itemLink">
-                    <div id="topProgramming" class="itemTitle">Life</div>
+                    <div class="space"></div>
                     <a href="https://kcls.overdrive.com">
                         <figure>
                             <img src="./resources/images/oklcs.png" alt="kcls.overdrive Icon">
@@ -360,18 +303,11 @@
                             <figcaption>KContent</figcaption>
                         </figure>
                     </a>
-                    <a href="https://www.airbnb.com">
-                        <figure>
-                            <img src="./resources/images/airbnb.png" alt="Airbnb Icon">
-                            <figcaption>AirBnB</figcaption>
-                        </figure>
-                    </a>
-                    <a href="https://www.kayak.com/">
-                        <figure>
-                            <img src="./resources/images/kayak.png" alt="kayak Icon">
-                            <figcaption>Kayak</figcaption>
-                        </figure>
-                    </a>
+                 </div>
+            </div>
+            <div class="col-12">
+                <div class="itemLink">
+                    <div id="topProgramming" class="itemTitle">Life</div>
                  </div>
             </div>
         </div>
