--- a/link/index.html
+++ b/link/index.html
@@ -155,6 +155,12 @@
                             <figcaption>gitHub</figcaption>
                         </figure>
                     </a>
+                    <a href="https://www.codepen.com">
+                        <figure>
+                            <img src="./resources/images/codpen.png" alt="Codepen Icon">
+                            <figcaption>Codepen</figcaption>
+                        </figure>
+                    </a>
                     <div class="space"></div>
                     <a href="https://www.w3schools.com/">
                         <figure>
