--- a/link/index.html
+++ b/link/index.html
@@ -155,7 +155,7 @@
                             <figcaption>gitHub</figcaption>
                         </figure>
                     </a>
-                    <a href="https://www.codepen.com">
+                    <a href="https://www.codepen.io">
                         <figure>
                             <img src="./resources/images/codepen.png" alt="Codepen Icon">
                             <figcaption>Codepen</figcaption>
