change cnn to gnews

--- a/link/index.html
+++ b/link/index.html
@@ -17,10 +17,16 @@
             <div class="col-12">
                 <div class="itemLink">
                     <div id="top" class="itemTitle">News</div>
-                    <a href="http://www.king5.com">
+                    <a href="http://cnbc.com/">
                         <figure>
-                            <img src="./resources/images/king5.png" alt="King5 Icon">
-                            <figcaption>King 5</figcaption>
+                            <img src="./resources/images/cnbc.png" alt="CNBC Icon">
+                            <figcaption>CNBC</figcaption>
+                        </figure>
+                    </a>
+                    <a href="https://news.google.com">
+                        <figure>
+                            <img src="./resources/images/cnn.png" alt="CNN Icon">
+                            <figcaption>GNews</figcaption>
                         </figure>
                     </a>
                     <a href="http://drudgereport.com/">
@@ -29,16 +35,10 @@
                             <figcaption>Drudge</figcaption>
                         </figure>
                     </a>
-                    <a href="http://cnn.com/">
+                    <a href="http://www.king5.com">
                         <figure>
-                            <img src="./resources/images/cnn.png" alt="CNN Icon">
-                            <figcaption>CNN</figcaption>
-                        </figure>
-                    </a>
-                    <a href="http://cnbc.com/">
-                        <figure>
-                            <img src="./resources/images/cnbc.png" alt="CNBC Icon">
-                            <figcaption>CNBC</figcaption>
+                            <img src="./resources/images/king5.png" alt="King5 Icon">
+                            <figcaption>King 5</figcaption>
                         </figure>
                     </a>
                     <a href="https://twitter.com/karlsjohnson">
@@ -118,7 +118,7 @@
                             <img src="./resources/images/plex.png" alt="Plex Icon">
                             <figcaption>Plex</figcaption>
                         </figure>
-                    </a>                    
+                    </a>
                     <div class="space"></div>
                      <a href="https://ifttt.com/">
                         <figure>
