--- a/link/index.html
+++ b/link/index.html
@@ -25,7 +25,7 @@
                     </a>
                     <a href="https://news.google.com">
                         <figure>
-                            <img src="./resources/images/cnn.png" alt="CNN Icon">
+                            <img src="./resources/images/gnews.png" alt="Google News Icon">
                             <figcaption>GNews</figcaption>
                         </figure>
                     </a>
