--- a/link/index.html
+++ b/link/index.html
@@ -161,6 +161,12 @@
                             <figcaption>Codepen</figcaption>
                         </figure>
                     </a>
+                    <a href="https://www.c9.io">
+                        <figure>
+                            <img src="./resources/images/c9.png" alt="Cloud9 Icon">
+                            <figcaption>Cloud9</figcaption>
+                        </figure>
+                    </a>
                     <div class="space"></div>
                     <a href="https://www.w3schools.com/">
                         <figure>
