Add msn and instapaper

--- a/link/index.html
+++ b/link/index.html
@@ -23,10 +23,10 @@
                             <figcaption>CNBC</figcaption>
                         </figure>
                     </a>
-                    <a href="https://news.google.com">
+                    <a href="https://www.msn.com/en-us/news">
                         <figure>
-                            <img src="./resources/images/gnews.png" alt="Google News Icon">
-                            <figcaption>GNews</figcaption>
+                            <img src="./resources/images/msn.png" alt="MSN Icon">
+                            <figcaption>MSN</figcaption>
                         </figure>
                     </a>
                     <a href="http://drudgereport.com/">
@@ -41,10 +41,10 @@
                             <figcaption>King 5</figcaption>
                         </figure>
                     </a>
-                    <a href="https://twitter.com/karlsjohnson">
+                    <a href="https://instapaper.com">
                         <figure>
-                            <img src="./resources/images/twitter.png" alt="Twitter Icon">
-                            <figcaption>Twitter</figcaption>
+                            <img src="./resources/images/instapaper.png" alt="Instapaper Icon">
+                            <figcaption>Instapaper</figcaption>
                         </figure>
                     </a>
                   <div class="space"></div>
@@ -321,7 +321,13 @@
                             <figcaption>KContent</figcaption>
                         </figure>
                     </a>
-                 </div>
+                    <a href="https://twitter.com/karlsjohnson">
+                        <figure>
+                            <img src="./resources/images/twitter.png" alt="Twitter Icon">
+                            <figcaption>Twitter</figcaption>
+                        </figure>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
