change news sites

--- a/link/index.html
+++ b/link/index.html
@@ -17,28 +17,28 @@
             <div class="col-12">
                 <div class="itemLink">
                     <div id="top" class="itemTitle">News</div>
-                    <a href="http://cnbc.com/">
+                    <a href="https://www.marketwatch.com">
                         <figure>
-                            <img src="./resources/images/cnbc.png" alt="CNBC Icon">
-                            <figcaption>CNBC</figcaption>
+                            <img src="./resources/images/marketwatch.png" alt="Marketwatch Icon">
+                            <figcaption>Marketwatch</figcaption>
+                        </figure>
+                    </a>
+                    <a href="https://www.allsides.com">
+                        <figure>
+                            <img src="./resources/images/allsides.png" alt="All Sides Icon">
+                            <figcaption>All Sides</figcaption>
+                        </figure>
+                    </a>
+                    <a href="http://komonews.com">
+                        <figure>
+                            <img src="./resources/images/komo.png" alt="Komo News Icon">
+                            <figcaption>Komo</figcaption>
                         </figure>
                     </a>
                     <a href="https://www.msn.com/en-us/news">
                         <figure>
                             <img src="./resources/images/msn.png" alt="MSN Icon">
                             <figcaption>MSN</figcaption>
-                        </figure>
-                    </a>
-                    <a href="http://drudgereport.com/">
-                        <figure>
-                            <img src="./resources/images/drudge.png" alt="drudgereport Icon">
-                            <figcaption>Drudge</figcaption>
-                        </figure>
-                    </a>
-                    <a href="http://www.king5.com">
-                        <figure>
-                            <img src="./resources/images/king5.png" alt="King5 Icon">
-                            <figcaption>King 5</figcaption>
                         </figure>
                     </a>
                     <a href="https://instapaper.com">
