--- a/link/index.html
+++ b/link/index.html
@@ -54,10 +54,10 @@
                             <figcaption>Bible</figcaption>
                         </figure>
                     </a>
-                    <a href="https://instapaper.com">
+                    <a href="https://www.sololearn.com/Profile/8721021">
                         <figure>
-                            <img src="./resources/images/instapaper.png" alt="Instapaper Icon">
-                         <figcaption>Instapaper</figcaption>
+                            <img src="./resources/images/sololearn.png" alt="Sololearn Icon">
+                         <figcaption>SoloLearn</figcaption>
                         </figure>
                      </a>
                      <a href="https://www.vocabulary.com">
