Update with flickr

--- a/link/index.html
+++ b/link/index.html
@@ -17,16 +17,16 @@
             <div class="col-12">
                 <div class="itemLink">
                     <div id="top" class="itemTitle">Top</div>
-                    <a href="https://www.investopedia.com">
+                    <a href="https://www.marketwatch.com">
                         <figure>
-                            <img src="./resources/images/investopedia.png" alt="investopedia Icon">
-                            <figcaption>Investopedia</figcaption>
+                            <img src="./resources/images/marketwatch.png" alt="marketwatch Icon">
+                            <figcaption>Marketwatch</figcaption>
                         </figure>
                     </a>
-                    <a href="https://www.allsides.com">
+                    <a href="https://drudgereport.com">
                         <figure>
-                            <img src="./resources/images/allsides.png" alt="All Sides Icon">
-                            <figcaption>All Sides</figcaption>
+                            <img src="./resources/images/drudge.png" alt="Drudge Icon">
+                            <figcaption>Drudge</figcaption>
                         </figure>
                     </a>
                     <a href="http://komonews.com">
@@ -39,6 +39,18 @@
                         <figure>
                             <img src="./resources/images/reddit.png" alt="reddit Icon">
                             <figcaption>reddit</figcaption>
+                        </figure>
+                    </a>
+                    <a href="https://www.instagram.com">
+                        <figure>
+                            <img src="./resources/images/instagram.png" alt="Instagram Icon">
+                            <figcaption>Instagram</figcaption>
+                        </figure>
+                    </a>
+                    <a href="https://www.pinterest.com">
+                        <figure>
+                            <img src="./resources/images/pinterest.png" alt="Pinterest Icon">
+                            <figcaption>Pinterest</figcaption>
                         </figure>
                     </a>
                     <div class="space"></div>
@@ -54,28 +66,10 @@
                             <figcaption>Bible</figcaption>
                         </figure>
                     </a>
-                    <a href="https://www.sololearn.com/Profile/8721021">
-                        <figure>
-                            <img src="./resources/images/sololearn.png" alt="Sololearn Icon">
-                         <figcaption>SoloLearn</figcaption>
-                        </figure>
-                     </a>
                      <a href="https://www.vocabulary.com">
                         <figure>
                             <img src="./resources/images/vocabulary.png" alt="Vocabulary Icon">
                             <figcaption>Vocabulary</figcaption>
-                        </figure>
-                    </a>
-                     <a href="https://www.pinboard.in">
-                        <figure>
-                            <img src="./resources/images/pinboard.png" alt="Pinboard Icon">
-                            <figcaption>Pinboard</figcaption>
-                        </figure>
-                    </a>
-                    <a href="https://medium.com">
-                        <figure>
-                            <img src="./resources/images/medium.png" alt="medium Icon">
-                            <figcaption>Medium</figcaption>
                         </figure>
                     </a>
                 </div>
@@ -83,35 +77,16 @@
             <div class="col-12">
                 <div class="itemLink">
                     <div id="top" class="itemTitle">Media</div>
-                    <a href="https://www.instagram.com">
+                    <a href="https://app.plex.tv/web/app">
                         <figure>
-                            <img src="./resources/images/instagram.png" alt="Instagram Icon">
-                            <figcaption>Instagram</figcaption>
-                        </figure>
-                    </a>
-                     <a href="https://www.pinterest.com">
-                        <figure>
-                            <img src="./resources/images/pinterest.png" alt="Pinterest Icon">
-                            <figcaption>Pinterest</figcaption>
+                            <img src="./resources/images/plex.png" alt="Plex Icon">
+                            <figcaption>Plex</figcaption>
                         </figure>
                     </a>
                     <a href="https://www.youtube.com/">
                         <figure>
                             <img src="./resources/images/youtube.png" alt="youtube Icon">
                             <figcaption>YouTube</figcaption>
-                        </figure>
-                    </a>
-                    <a href="https://photos.google.com">
-                        <figure>
-                            <img src="./resources/images/gphotos.png" alt="Google Photos Icon">
-                            <figcaption>gPhotos</figcaption>
-                        </figure>
-                    </a>
-                    <div class="space"></div>
-                    <a href="https://vimeo.com/">
-                        <figure>
-                            <img src="./resources/images/vimeo.png" alt="Vimeo Icon">
-                            <figcaption>Vimeo</figcaption>
                         </figure>
                     </a>
                     <a href="https://www.amazon.com/b/ref=lp_2676882011_nav_shopall_aiv_piv?rh=i%3Aprime-instant-video%2Cn%3A2676882011&ie=UTF8&node=2676882011">
@@ -126,10 +101,17 @@
                             <figcaption>Netflix</figcaption>
                         </figure>
                     </a>
-                    <a href="https://app.plex.tv/web/app">
+                    <a href="https://vimeo.com/">
                         <figure>
-                            <img src="./resources/images/plex.png" alt="Plex Icon">
-                            <figcaption>Plex</figcaption>
+                            <img src="./resources/images/vimeo.png" alt="Vimeo Icon">
+                            <figcaption>Vimeo</figcaption>
+                        </figure>
+                    </a>
+                    <div class="space"></div>
+                    <a href="https://www.flickr.com/photos/karl_s_johnson/">
+                        <figure>
+                            <img src="./resources/images/flickr.png" alt="flickr Icon">
+                            <figcaption>flickr</figcaption>
                         </figure>
                     </a>
                     <a href="https://dribbble.com">
@@ -138,10 +120,16 @@
                             <figcaption>Dribbble</figcaption>
                         </figure>
                     </a>
-                    <a href="https://500px.com/">
+                    <a href="https://medium.com">
                         <figure>
-                            <img src="./resources/images/500px.png" alt="500px Icon">
-                            <figcaption>500px</figcaption>
+                            <img src="./resources/images/medium.png" alt="medium Icon">
+                            <figcaption>Medium</figcaption>
+                        </figure>
+                    </a>
+                    <a href="https://www.pinboard.in">
+                        <figure>
+                            <img src="./resources/images/pinboard.png" alt="Pinboard Icon">
+                            <figcaption>Pinboard</figcaption>
                         </figure>
                     </a>
                </div>
